Day 12-13: Completed backend features and improved admin dashboard UI